--- a/templates/fancytimer.html
+++ b/templates/fancytimer.html
@@ -23,7 +23,7 @@
 </div>
 
 <div>
-  <h1>Question # <span id="question"></span></h1>
+  <h1><span id="question"></span></h1>
   <span id="demo"></span>
 </div>
 <div id="pclockdiv">
