--- a/templates/fancytimer.html
+++ b/templates/fancytimer.html
@@ -2,8 +2,7 @@
 
 {% block main %}
 
-<p>This is where the timer will go</p>
-<h1>Countdown Clock</h1>
+<h1>{{ exam_name }} Countdown Clock</h1>
 <div>
   <button id="start">Begin</button>
 </div>
@@ -24,7 +23,6 @@
 
 <div>
   <h1><span id="question"></span></h1>
-  <span id="demo"></span>
 </div>
 <div id="pclockdiv">
   <div>
