--- a/templates/regulartimer.html
+++ b/templates/regulartimer.html
@@ -2,8 +2,7 @@
 
 {% block main %}
 
-<p>This is where the timer will go</p>
-<h1>Countdown Clock</h1>
+<h1>{{ exam_name }} Countdown Clock</h1>
 <div>
   <button id="start">Begin</button>
 </div>
@@ -23,7 +22,7 @@
 </div>
 
 <div>
-  <h1>Question # <span id="question"></span></h1>
+  <h1><span id="question"></span></h1>
 </div>
 <div id="pclockdiv">
   <div>
