--- a/templates/sorry.html
+++ b/templates/sorry.html
@@ -1,5 +1,8 @@
 {% extends "layout.html" %}
 
 {% block main %}
-<p>Something fucked up</p>
+<h2>Error: {{ sorry }}</h2>
+<form action="/sorry" method="post">
+    <button class="btn btn-primary" type=submit>Go Back</button>
+</form>
 {% endblock %}
