--- a/templates/regulartimer.html
+++ b/templates/regulartimer.html
@@ -1,27 +1,9 @@
 {% extends "layout.html" %}
 
 {% block main %}
-
-<h1>{{ exam_name }} Countdown Clock</h1>
 <div>
-  <button id="start">Begin</button>
+  <button id="start">Begin Exam</button>
 </div>
-<div id="oclockdiv">
-  <div>
-    <span class="ohours"></span>
-    <div class="smalltext">Hours</div>
-  </div>
-  <div>
-    <span class="ominutes"></span>
-    <div class="smalltext">Minutes</div>
-  </div>
-  <div>
-    <span class="oseconds"></span>
-    <div class="smalltext">Seconds</div>
-  </div>
-</div>
-
-<div>
   <h1><span id="question"></span></h1>
 </div>
 <div id="pclockdiv">
@@ -38,6 +20,25 @@
     <div class="smalltext">Seconds</div>
   </div>
 </div>
+<br>
+<br>
+<h2>Overall Exam Clock</h2>
+<div id="oclockdiv">
+  <div>
+    <span class="ohours"></span>
+    <div class="smalltext">Hours</div>
+  </div>
+  <div>
+    <span class="ominutes"></span>
+    <div class="smalltext">Minutes</div>
+  </div>
+  <div>
+    <span class="oseconds"></span>
+    <div class="smalltext">Seconds</div>
+  </div>
+</div>
+
+<div>
 <div id="length" class="hidden">{{ length }}</div>
 <div id="mc_count" class="hidden">{{ mc_count }}</div>
 <script src="/static/regulartimer.js"></script>
