--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,13 +15,10 @@
         <!-- http://getbootstrap.com/docs/4.5/ -->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-        
-        <title>Final Exam Timer</title>
+    
+        <title>Exam Timer</title>
     </head>
     <body>
-        <navbar>Home</navbar>
-        <h1>Final Exam Timer{% block h1 %}{% endblock %}</h1>
-        
         <main class="container p-5">
             {% block main %}{% endblock %}
         </main>
