--- a/static/styles.css
+++ b/static/styles.css
@@ -128,3 +128,28 @@ footer {
 #next {
   visibility: hidden;
 }
+
+.progress-bar {
+	position: relative;
+	height: 1.5em;
+	background-color: #212529;
+	border-radius: .75em;
+	color: white;
+}
+
+.progress-bar::before {
+  content: attr(data-label);
+  display: flex;
+  align-items: center;
+  position: absolute;
+  left: .25em;
+  top: .25em;
+  bottom: .25em;
+  width: calc(var(--width, 0) * 1%);
+  max-width: calc(100% - 1em);
+  background-color: #ffa500;
+  border-radius: .5em;
+  padding: .5em;
+}
+
+
