--- a/templates/regulartimer.html
+++ b/templates/regulartimer.html
@@ -21,6 +21,7 @@
   </div>
 </div>
 <br>
+<div class="progress-bar" id="question-bar" style="--width: 100"></div>
 <br>
 <h2>Overall Exam Clock</h2>
 <div id="oclockdiv">
@@ -36,8 +37,9 @@
     <span class="oseconds"></span>
     <div class="smalltext">Seconds</div>
   </div>
-</div>
-
+</div> <br>
+<br>
+<div class="progress-bar" id="overall-bar" style="--width: 100"></div>
 <div>
 <div id="length" class="hidden">{{ length }}</div>
 <div id="mc_count" class="hidden">{{ mc_count }}</div>
